--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,10 +1,10 @@
 @font-face { /*Import a font from a file.*/
-    font-family: Jost; /*Refer to the font as Jost*/
-    src: url(/src/styles/fonts/Jost.ttf); /*Get the font from here*/
+    font-family: RobotoMono; /*Refer to the font as Jost*/
+    src: url(/src/styles/fonts/RobotoMono-VariableFont_wght.ttf); /*Get the font from here*/
 }
 
 html, body{
-    background-color: rgb(255, 255, 255); /*Sets the background color of the website*/
+    background-color: rgb(31, 31, 31); /*Sets the background color of the website*/
     font-family: Jost, sans-serif; /*Sets the whole site so use the font Jost, if it can't find it, it'll use a sans-serif font proivded by the browser instead*/
     color: rgb(0, 0, 0); /*Set the text color of the website to black*/
 }
@@ -32,7 +32,7 @@ button {
 
 .emailButton {
     color: black;
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(182, 36, 36);
     border-radius: 8px; /*Makes the buttons round*/
     text-align: center; /*Aligns text to the ceneter. Avoid center aligned text for paragraphs. They're mainly used for buttons*/
     padding: 8px; /*Add 8 pixels of padding between the corners of the element and the content of it to make it feel less cramped*/
@@ -40,7 +40,7 @@ button {
     text-decoration: none; /*Removes the underline from the link now that they look like buttons*/
     transition: 0.2s linear background-color; /*Add a transition when someone hovers over the button*/
     border:none;
-    font-family: Jost, sans-serif;
+    font-family: RobotoMono, sans-serif;
     font-size: 1em;
 }
 
@@ -166,7 +166,7 @@ h5 {
     text-decoration: none; /*Removes the underline from the link now that they look like buttons*/
     transition: 0.2s linear background-color; /*Add a transition when someone hovers over the button*/
     border:none;
-    font-family: Jost, sans-serif;
+    font-family: RobotoMono, sans-serif;
     font-size: 1em;
 }
 
